# March_Madness

./: .gitignore  AGENTS.md  DEVELOPMENT.md  GOAL_TRACKER.md  README.md  WORKLOG.md  pyproject.toml
config/: season.yaml
src/march_madness/: config.py
src/march_madness/bracket/: simulate.py  structure.py
src/march_madness/features/: build_features.py
src/march_madness/ingest/: kaggle.py  kenpom.py
src/march_madness/models/: common.py  logistic_regression.py  neural_net.py  random_forest.py  seed_knn.py  xgboost_model.py
tests/: test_bracket_simulate.py  test_bracket_structure.py  test_build_features.py  test_config.py  test_kaggle_ingest.py  test_kenpom_ingest.py  test_models.py
