[project]
name = "march-madness"
version = "0.1.0"
description = "NCAA tournament bracket prediction and simulation"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "matplotlib",
    "seaborn",
    "tqdm",
    "rapidfuzz",
    "plotly",
    "kaleido",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
